# shadopy-unofficial

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
shadopy/: __init__.py  api.py  connexion.py  models.py
tests/: __init__.py  test_api.py
